[package]
name = "usb4604"
version = "0.1.0"
edition = "2024"
description = "Hardware abstraction layer for USB4604 hub (GPIO control and I2C master)"
license = "MIT"
repository = "https://github.com/romixlab/usb4604"

[dependencies]
bitfield-struct = "0.12"
nusb = "0.2"
strum = { version = "0.27", features = ["derive"] }
embedded-hal = "1.0"

[dev-dependencies]
anyhow = "1.0"